@@ -91,13 +91,13 @@ public class MemberService {
                         .member(member)
                         .disease(disease)
                         .build())
-                .collect(Collectors.toList());
+                .toList();
         // 새로운 데이터 저장
         memberDiseaseRepository.saveAll(newMemberDiseases);
         // 최신 질병 목록 가져오기
         List<MemberDiseaseResponseDto.DiseaseInfo> diseaseInfoList = newMemberDiseases.stream()
                 .map(md -> new MemberDiseaseResponseDto.DiseaseInfo(md.getDisease().getId(), md.getDisease().getName()))
-                .collect(Collectors.toList());
+                .toList();
 
         return MemberDiseaseResponseDto.from(member.getId(), diseaseInfoList);
     }
